# GatorMath

./: .gitignore  CLAUDE_CODE_LIVE.md  README.md  STANDARDS.md  index.html  pyproject.toml
css/: base.css  layout.css  playground.css  responsive.css  styles.css
docs/: API_DOCS.md  ASSETS.md  AUTHENTICATION.md  BRANDING.md  CLI_DOCS.md  DEVELOPMENT.md  STANDARDS.md
docs/branches/: BRANCHES.md
docs/branding/: color_palette.md
examples/: basic_usage.py
gatormath/: __init__.py
gatormath/cli/: __init__.py  app.py  theme.py
gatormath/cli/interactive/: __init__.py
gatormath/core/: __init__.py  arithmetic.py
gatormath/geometry/: __init__.py  shapes2d.py
gatormath/precision/: __init__.py  comparison.py
gatormath/utils/: __init__.py
gatormath/web/: __init__.py  app.py
gatormath/web/routes/: __init__.py  api.py  pages.py
gatormath/web/static/css/: base.css  components.css  layout.css  playground.css  responsive.css
gatormath/web/static/js/: animations.js  bezier-canvas.js  calculators.js  code-playground.js  init.js  matrix-canvas.js  three-background.js  triangle-canvas.js  utils.js  vector-canvas.js
gatormath/web/templates/: index.html
js/: animations.js  bezier-canvas.js  calculators.js  code-playground.js  init.js  matrix-canvas.js  scripts.js  utils.js
tests/: __init__.py
tests/test_cli/: __init__.py
tests/test_core/: __init__.py  test_arithmetic.py
tests/test_geometry/: __init__.py  test_shapes2d.py
tests/test_precision/: __init__.py
