[build-system]
requires = ["setuptools>=68.0.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gatormath"
version = "0.1.0"
description = "A math and geometry Pythonic toolkit that refuses to be boring and actually gets work done"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GatorMath Development Team", email = "dev@gatormath.dev"}
]
maintainers = [
    {name = "GatorMath Development Team", email = "dev@gatormath.dev"}
]
keywords = [
    "mathematics",
    "geometry",
    "numerical",
    "algebra",
    "calculus",
    "statistics",
    "computational-geometry",
    "floating-point",
    "precision",
    "cli",
    "interactive"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    # Core numerical computing
    "numpy>=1.24.0,<2.0.0",

    # CLI and terminal UI
    "rich>=13.7.0",
    "click>=8.1.7",
    "typer>=0.9.0",

    # Interactive components
    "prompt-toolkit>=3.0.43",
    "questionary>=2.0.1",

    # Data validation
    "pydantic>=2.5.0",

    # Decimal precision
    "mpmath>=1.3.0",

    # Type hints
    "typing-extensions>=4.9.0"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.92.0",

    # Code quality
    "ruff>=0.1.9",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pylint>=3.0.3",

    # Documentation
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.2",
    "myst-parser>=2.0.0",

    # Development tools
    "ipython>=8.19.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.6.0"
]

viz = [
    # Visualization (optional)
    "matplotlib>=3.8.2",
    "plotly>=5.18.0"
]

scientific = [
    # Extended scientific computing
    "scipy>=1.11.4",
    "sympy>=1.12"
]

all = [
    "gatormath[dev,viz,scientific]"
]

[project.urls]
Homepage = "https://github.com/dnoice/GatorMath"
Documentation = "https://gatormath.readthedocs.io"
Repository = "https://github.com/dnoice/GatorMath"
Issues = "https://github.com/dnoice/GatorMath/issues"
Changelog = "https://github.com/dnoice/GatorMath/blob/main/CHANGELOG.md"

[project.scripts]
gatormath = "gatormath.cli.app:main"
gmath = "gatormath.cli.app:main"

[tool.setuptools]
packages = ["gatormath"]

[tool.setuptools.package-data]
gatormath = ["py.typed"]

# ============================================================================
# Testing Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=gatormath",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-branch",
    "--cov-fail-under=90"
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "precision: marks tests that verify floating-point precision",
    "geometric: marks tests for geometry modules",
    "mathematical: marks tests for math modules",
    "cli: marks tests for CLI components"
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

# ============================================================================
# Code Quality Tools
# ============================================================================

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "C",      # flake8-comprehensions
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "N",      # pep8-naming
    "YTT",    # flake8-2020
    "ANN",    # flake8-annotations
    "S",      # flake8-bandit
    "BLE",    # flake8-blind-except
    "FBT",    # flake8-boolean-trap
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "EM",     # flake8-errmsg
    "EXE",    # flake8-executable
    "ISC",    # flake8-implicit-str-concat
    "ICN",    # flake8-import-conventions
    "G",      # flake8-logging-format
    "INP",    # flake8-no-pep420
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "SLF",    # flake8-self
    "SIM",    # flake8-simplify
    "TID",    # flake8-tidy-imports
    "TCH",    # flake8-type-checking
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate
    "PD",     # pandas-vet
    "PGH",    # pygrep-hooks
    "PL",     # pylint
    "TRY",    # tryceratops
    "NPY",    # numpy-specific rules
    "RUF",    # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for self
    "ANN102",  # Missing type annotation for cls
    "D203",    # 1 blank line required before class docstring
    "D213",    # Multi-line docstring summary should start at the second line
    "COM812",  # Trailing comma missing (conflicts with formatter)
    "ISC001",  # Implicit string concatenation (conflicts with formatter)
]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # Use of assert
    "ANN201",  # Missing return type annotation
    "ARG",     # Unused function arguments
    "PLR2004", # Magic value used in comparison
]
"__init__.py" = [
    "F401",    # Imported but unused
]

[tool.ruff.isort]
known-first-party = ["gatormath"]
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.pydocstyle]
convention = "google"

# ============================================================================
# Black Configuration
# ============================================================================

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# ============================================================================
# isort Configuration
# ============================================================================

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["gatormath"]
force_sort_within_sections = true
lines_after_imports = 2

# ============================================================================
# MyPy Configuration
# ============================================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
strict_concatenate = true
disallow_any_generics = false
disallow_subclassing_any = true
disallow_untyped_calls = false
warn_return_any = true
no_implicit_reexport = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "matplotlib.*",
    "scipy.*",
    "sympy.*",
    "plotly.*",
    "mpmath.*"
]
ignore_missing_imports = true

# ============================================================================
# Coverage Configuration
# ============================================================================

[tool.coverage.run]
source = ["gatormath"]
branch = true
parallel = true
omit = [
    "tests/*",
    "**/__init__.py",
    "**/conftest.py"
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"

# ============================================================================
# Pylint Configuration
# ============================================================================

[tool.pylint.main]
py-version = "3.9"
jobs = 0
limit-inference-results = 100
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "C0330",  # Wrong hanging indentation (conflicts with black)
    "C0326",  # Bad whitespace (conflicts with black)
    "R0903",  # Too few public methods
    "R0913",  # Too many arguments
    "W0212",  # Access to protected member (needed for testing)
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z", "a", "b", "c", "n", "m", "v", "ex", "Run", "_"]

[tool.pylint.design]
max-args = 8
max-attributes = 12
max-bool-expr = 5
max-branches = 15
max-locals = 20
max-parents = 7
max-public-methods = 25
max-returns = 6
max-statements = 60
min-public-methods = 1

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

# ============================================================================
# Bandit Security Configuration
# ============================================================================

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
